[gd_scene load_steps=9 format=3 uid="uid://dj3sjxuq3rfk7"]

[ext_resource type="Script" uid="uid://bftyrpuwo5206" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://b6y5c01uvxlua" path="res://textures/player_sheet.png" id="1_l8h54"]
[ext_resource type="Texture2D" uid="uid://boblutb3oqbr8" path="res://textures/shield.png" id="3_btcbx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ntmi"]
atlas = ExtResource("1_l8h54")
region = Rect2(0, 0, 99, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_btcbx"]
atlas = ExtResource("1_l8h54")
region = Rect2(198, 0, 99, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwnis"]
atlas = ExtResource("1_l8h54")
region = Rect2(99, 0, 99, 77)

[sub_resource type="SpriteFrames" id="SpriteFrames_k53q1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ntmi")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btcbx")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwnis")
}],
"loop": true,
"name": &"straight",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_l8h54"]
radius = 34.0

[node name="Player" type="Area2D"]
z_index = 100
script = ExtResource("1_4ntmi")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_k53q1")
animation = &"straight"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_l8h54")

[node name="FiringPositions" type="Node2D" parent="."]

[node name="LeftGun" type="Node2D" parent="FiringPositions"]
position = Vector2(-35, -6)

[node name="RightGun" type="Node2D" parent="FiringPositions"]
position = Vector2(34, -7)

[node name="FireDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="RapidFireTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_btcbx")

[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="RapidFireTimer" to="." method="_on_rapid_fire_timer_timeout"]
